# 3D_Car_Animation_CG

./: CMakeLists.txt  README.md
include/: glad.c  glad.h
src/: main.cpp
